fixed alignment issues with hero and about page

--- a/src/components/AdminDashBoard/Bartenders/EditBartenders.scss
+++ b/src/components/AdminDashBoard/Bartenders/EditBartenders.scss
@@ -5,7 +5,13 @@
   width: 80%;
 
   .edit-bartenders-wrapper {
+    align-items: center;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+
+    span {
+      border-top: 1px solid black;
+      width: 60%;
+    }
   }
 }
