--- a/src/components/AdminDashBoard/Services/EditServices.scss
+++ b/src/components/AdminDashBoard/Services/EditServices.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  right: -20%;
-  width: 80%;
+  right: -10%;
+  width: 90%;
 
   .edit-services-wrapper {
     align-items: center;
